<resources>
    <string name="app_name">AndroidLearning</string>

    <!--首页列表项数据-->
    <string name="main_jump_view_learning">自定义view学习页</string>
    <string name="main_jump_view_event_learning">view事件学习页</string>
    <string name="main_jump_fragment_learning">fragment学习页</string>
    <string name="main_jump_lauch_learning">activity启动学习页</string>
    <string name="main_jump_service_learning">service学习</string>
    <string name="main_jump_broadcast_learning">广播学习</string>
    <string name="main_jump_handler_learning">handler学习</string>
    <string name="main_jump_thread_learning">线程学习</string>
    <string name="main_jump_window_learning">window学习</string>
    <string name="main_jump_imageloader_learning">图片加载学习</string>
    <string name="main_jump_animation_learning">动画学习</string>
    <string name="main_jump_memory_leak_learning">内存泄露学习</string>
    <string name="main_jump_other_learning">未分类学习</string>
    <string name="main_jump_io_learning">io学习</string>
    <string name="main_jump_web_learning">web相关知识学习</string>

    <string name="show_fragment">show_fragment</string>
    <string name="test_dialog_fragment_content">测试DialogFragment</string>
    <string name="button_common_click_tip">点我，测试效果</string>

    <string name="lauch_activity_1">activity启动模式学习页1</string>
    <string name="lauch_activity_single_task">intent启动singleTask</string>
    <string name="lauch_activity_2">activity启动模式学习页2</string>
    <string name="lauch_activity_3">activity启动模式学习页3</string>
    <string name="lauch_activity_4">activity启动模式学习页4</string>
    <string name="lauch_activity_to_4">点击启动4</string>

    <string name="start_service">start service</string>
    <string name="bind_service">bind service</string>
    <string name="unbind_service">unbind service</string>
    <string name="stop_service">stop service</string>

    <string name="send_static_broadcast">发送静态广播</string>
    <string name="send_dynamic_broadcast">发送动态广播</string>
    <string name="receive_broadcast">收到了广播</string>

    <string name="send_handler_message">发送handler消息</string>

    <string name="AsyncTask_learning">执行文件下载AsyncTask</string>
    <string name="file_load_loading">文件下载准备中</string>
    <string name="file_load_begin">开始下载</string>
    <string name="current_load_progress">当前下载进度：%d%%</string>
    <string name="file_load_succeded">文件下载成功</string>

    <string name="add_button">添加按钮</string>
    <string name="button_added">手动添加的按钮</string>
    <string name="delete_button">删除按钮</string>
    <string name="button_is_added">该按钮已添加</string>
    <string name="button_is_empty">该按钮不存在</string>

    <string name="test_button">测试按钮</string>
    <string name="click_to_langer">点击按钮变长</string>
    <string name="test_scroll_animation">滑动列表隐藏view</string>
    <string name="button_is_changed">按钮已经改变</string>

    <string name="show_phone_tel">获取本机号码</string>
    <string name="phone_tel">本机号码为：</string>
    <string name="no_ui_show_toast">非UI线程弹toast</string>
    <string name="ui_show_toast">UI线程弹toast</string>
    <string name="jump_test_span">点击查看span测试效果</string>
    <string name="show_test_span">点击查看span测试效果</string>
    <string name="cautch_exception">全局捕获异常</string>
    <string name="other_test">未分类测试</string>

    <string name="memory_leak_tip1">匿名内部类runnable泄露</string>
    <string name="memory_leak_tip2">单例泄露</string>
    <string name="memory_leak_tip3">handler泄露</string>

    <string name="io_share_preferences">sp读写测试</string>
    <string name="io_serializable_test">serializable测试</string>
    <string name="io_parcelable_test">Parcelable测试</string>
    <string name="io_parcelable_get_data">获取Parcelable序列化数据</string>

    <string name="web_scheme">scheme测试</string>
    <string name="web_view">webview测试</string>

</resources>
