<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/common_test_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <!--按钮列表-->
    <LinearLayout
        android:id="@+id/common_test_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/common_test_button1"
            style="@style/MainJumpText"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="@string/lauch_activity_1"
            />

        <TextView
            android:id="@+id/common_test_button2"
            style="@style/MainJumpText"
            android:visibility="gone"
            tools:text="@string/lauch_activity_2"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/common_test_button3"
            style="@style/MainJumpText"
            android:visibility="gone"
            tools:text="@string/lauch_activity_3"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/common_test_button4"
            style="@style/MainJumpText"
            android:visibility="gone"
            tools:text="@string/lauch_activity_4"
            tools:visibility="visible"
            />
    </LinearLayout>

    <!--其他view-->
    <LinearLayout
        android:id="@+id/common_test_other_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/common_test_other_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_common_button"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/A2"
            android:textSize="16sp"
            android:visibility="visible"
            tools:text="@string/button_common_click_tip"
            />
    </LinearLayout>


</LinearLayout>
